--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   "keywords": [
     "react",
     "daniel",
-    "daniel",
-    "lim",
-    "quiz"
+    "daniel-lim",
+    "memberclouds",
+    "quiz",
+    "quick"
   ],
   "author": "Daniel Lim",
   "license": "ISC",
+  "devDependencies" :{
+    "babel-core": "5.8.*",
+    "babel-loader": "5.3.*",
+    "webpack": "1.12.*"
+  },
+  "dependencies" : {
+      "react": "^0.14.7",
+      "react-dom": "^0.14.7"
+  },
   "bugs": {
     "url": "https://github.com/profoundhub/quick-react-quiz/issues"
   },
